syntax = "proto3";

package rhythmicity.main_api;

option go_package = "github.com/nichol20/rhythmicity/main-api/internal/pb";

message Empty {}

message RequestById {
    string id = 1;
}

message RequestByIds {
    repeated string ids = 1;
}

message Image {
    uint32 height = 1;
    string url = 2;
    uint32 width = 3; 
}